# python-for-data-science

./: .gitignore
0-starting/ex00/: Hello.py  memo.txt
0-starting/ex01/: format_ft_time.py  memo.txt  result.txt
0-starting/ex02/: find_ft_type.py  tester.py
0-starting/ex03/: NULL_not_found.py
0-starting/ex04/: result.txt  whatis.py
0-starting/ex05/: building.py  result.txt
0-starting/ex06/: filterstring.py  ft_filter.py  result.txt  test_ft_filter.py
0-starting/ex07/: sos.py
0-starting/ex08/: Loading.py  test.py  test2.py  test3.py  test4.py
0-starting/ex09/: pyproject.toml
0-starting/ex09/ft_package/: __init__.py  example.py
1-array/ex00/: give_bmi.py  result.txt  tester.py
1-array/ex01/: array2D.py  result.txt  tester.py
1-array/ex02/: load_image.py  result.txt  tester.py
1-array/ex03/: load_image.py  zoom.py
1-array/ex04/: load_image.py  rotate.py  tester.py
1-array/ex05/: load_image.py  pimp_image.py  tester.py
2-datatable/ex00/: load_csv.py  messy.csv
2-datatable/ex01/: aff_life.py  load_csv.py  tmp.py
2-datatable/ex02/: aff_pop.py  aff_pop_old.py  tester.py
2-datatable/ex03/: tmp.py
3-oop/ex00/: S1E9.py  result.txt  tester.py
