[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "ft_package"
version = "0.0.1"
authors = [
  { name="satouyuuki" },
  { email="yuki01377@gmail.com" },
]
description = "A small test package"
readme = "README.md"
requires-python = ">=3.10"
#classifiers = [
#    "Programming Language :: Python :: 3",
#    "Operating System :: OS Independent",
#]
license = "MIT"
#license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/satouyuuki/ft_package"
#Issues = "https://github.com/satouyuuki/python-for-data-science/issues"
